Adds andAll PropertyValidator helper